--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "workout-vue-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,12 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "pinia": "^2.1.6",
+    "prettier": "^3.0.3",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.17.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@types/node": "^20.6.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-vue": "^9.17.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vue-tsc": "^1.8.5"
+    "vite-plugin-windicss": "^1.9.1",
+    "vue-tsc": "^1.8.5",
+    "windicss": "^3.5.6"
   }
 }
