--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   DOCKER_TLS_CERTDIR: "/certs"
   # Minu konteineri registri aadress AWS-s (Amazon Elastic Container Registry)
   # Asenda MINU_REGISTRI_NIMI
-  DOCKER_REGISTRY: 662032419283.dkr.ecr.eu-north-1.amazonaws.com/tuutoriplatvorm/back
+  DOCKER_REGISTRY: 662032419283.dkr.ecr.eu-north-1.amazonaws.com/tuutoriplatvorm
   #  662032419283.dkr.ecr.eu-north-1.amazonaws.com/tuutoriplatvorm
   # muuda enda domeeniks või virtuaalmasina IP-ks
   # Pole näites selgitatud: 
