--- a/BackEnd/appsettings.Development.json
+++ b/BackEnd/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=project-db;Username=postgres;Password=parool"
+    "Default": "Host=localhost;Port=5434;Database=project_db;Username=postgres;Password=parool"
   }
 }
